# llm-writing-feedback

./: .gitignore  Cargo.toml  README.md  package-lock.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte
src/: main.rs
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
tauri-app/: .gitignore  package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: main.rs
tauri-app/src/routes/: +page.svelte
